--- a/JAVA/Leccion01/estudiantes/src/main/resources/application.properties
+++ b/JAVA/Leccion01/estudiantes/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-#Conexión MySQL
+# Conexión MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/estudiantes
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#Evitar que se cree el esquema nuevamente
+# Evitar que se cree el esquema nuevamente
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 
-#Desactivar el tomcat
+# Desactivar el tomcat (servidor para aplicacion web) porque la ejecucion desde consola
 spring.main.web-application-type=none
