--- a/JAVA/Leccion01/estudiantes/src/main/resources/application.properties
+++ b/JAVA/Leccion01/estudiantes/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Evitar que se cree el esquema nuevamente
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 
 # Desactivar el tomcat (servidor para aplicacion web) porque la ejecucion desde consola
